First complete version, now with interchanges marked as such

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </head>
 
 <body class="">
-    <div class="subway-map" data-columns="44" data-rows="30" data-cellSize="25" data-legendId="legend" data-textClass="text" data-gridNumbers="true" data-grid="false" data-lineWidth="8" style="background-color: transparent;">
+    <div class="subway-map" data-columns="44" data-rows="30" data-cellSize="26" data-legendId="legend" data-textClass="text" data-gridNumbers="true" data-grid="false" data-lineWidth="8" style="background-color: transparent;">
         <ul data-color="#5082C3" data-label="Linha Azul">
             <li data-coords="10,9" data-labelPos="NW"><a href="http://example.com/">Reboleira</a></li>
             <li data-coords="12,9" data-labelPos="S"><a href="http://example.com/">Amadora-Este</a></li>
@@ -65,14 +65,16 @@
             <li data-coords="21,13.5" data-labelPos="E" data-marker="@station"><a href="http://example.com/">Laranjeiras</a></li> 
             <li data-coords="22,15" data-labelPos="NE" data-marker="@station"><a href="http://example.com/">Jardim Zoológico</a></li> 
             <li data-coords="23.5,16.5" data-labelPos="SW" data-marker="@station"><a href="http://example.com/">Praça de Espanha</a></li>            
-            <li data-coords="26.5,19.5" data-labelPos="W" data-marker="@station"><a href="http://example.com/">Parque</a></li>
+            <li data-coords="26.5,19.5" data-labelPos="W" data-marker="@station"><a href="http://example.com/">Parque</a></li>           
+            <li data-coords="29.25,22.25" data-labelPos="W" data-marker="@station"><a href="http://example.com/">Avenida</a></li>           
+            <li data-coords="30.5,23.5" data-labelPos="W" data-marker="@station"><a href="http://example.com/">Restauradores</a></li>
             <li data-coords="33,26"></li>
             <li data-coords="36,26" data-labelPos="S"><a href="http://example.com/">Santa Apolónia</a></li>
         </ul>
         <ul data-color="#FAB914" data-label="Linha Amarela">
             <li data-coords="27,23" data-labelPos="W"><a href="http://example.com/">Rato</a></li>
             <li data-coords="28,22" data-dir="E"></li>
-            <li data-coords="28,21" data-labelPos="W"><a href="http://example.com/">Marquês de Pombal</a></li>
+            <li data-coords="28,21" data-labelPos="SW" data-marker="interchange"><a href="http://example.com/">Marquês de Pombal</a></li>
             <li data-coords="28,19.5" data-labelPos="E"><a href="http://example.com/">Picoas</a></li>
             <li data-coords="28,16.5" data-labelPos="W"><a href="http://example.com/">Campo Pequeno</a></li>
             <li data-coords="28,15" data-labelPos="W"><a href="http://example.com/">Entre Campos</a></li>
@@ -86,18 +88,24 @@
         <ul data-color="#00A0A5" data-label="Linha Verde">
             <li data-coords="30,26" data-labelPos="NW"><a href="http://example.com/">Cais do Sodré</a></li>
             <li data-coords="31,26"></li>
-            <li data-coords="32,25" data-dir="E"></li>
+            <li data-coords="32,25" data-dir="E"></li>                       
+            <li data-coords="32,25.25" data-labelPos="E" data-marker="@interchange"><a href="http://example.com/">Baixa-Chiado</a></li>                     
+            <li data-coords="32,23.9" data-labelPos="E" data-marker="@station"><a href="http://example.com/">Rossio</a></li>                     
+            <li data-coords="32,22.8" data-labelPos="E" data-marker="@station"><a href="http://example.com/">Martim Moniz</a></li>                     
+            <li data-coords="32,21.7" data-labelPos="E" data-marker="@station"><a href="http://example.com/">Intendente</a></li>                     
+            <li data-coords="32,20.6" data-labelPos="E" data-marker="@station"><a href="http://example.com/">Anjos</a></li>                     
+            <li data-coords="32,19.5" data-labelPos="E" data-marker="@station"><a href="http://example.com/">Arroios</a></li>
             <li data-coords="32,16" data-labelPos="E"><a href="http://example.com/">Areeiro</a></li>
             <li data-coords="32,14" data-labelPos="E"><a href="http://example.com/">Roma</a></li>
             <li data-coords="32,12" data-labelPos="E"><a href="http://example.com/">Alvalade</a></li>
             <li data-coords="31,11" data-dir="N"></li>
-            <li data-coords="28,11" data-labelPos="NE"><a href="http://example.com/">Campo Grande</a></li>
+            <li data-coords="28,11" data-labelPos="NE" data-marker="interchange"><a href="http://example.com/">Campo Grande</a></li>
             <li data-coords="26,11" data-labelPos="N"><a href="http://example.com/">Telheiras</a></li>
         </ul>
         <ul data-color="#E6196E" data-label="Linha Vermelha">
-            <li data-coords="25,18" data-labelPos="SW"><a href="http://example.com/">São Sebastião</a></li>
-            <li data-coords="28,18" data-labelPos="NE"><a href="http://example.com/">Saldanha</a></li>
-            <li data-coords="32,18" data-labelPos="SE"><a href="http://example.com/">Alameda</a></li>
+            <li data-coords="25,18" data-labelPos="SW" data-marker="interchange"><a href="http://example.com/">São Sebastião</a></li>
+            <li data-coords="28,18" data-labelPos="NE" data-marker="interchange"><a href="http://example.com/">Saldanha</a></li>
+            <li data-coords="32,18" data-labelPos="SE" data-marker="interchange"><a href="http://example.com/">Alameda</a></li>
             <li data-coords="34,18"></li>
             <li data-coords="34.5,17.75" data-labelPos="W" data-marker="@station"><a href="http://example.com/">Olaias</a></li>
             <li data-coords="35.5,16.75" data-labelPos="E" data-marker="@station"><a href="http://example.com/">Bela Vista</a></li>
