Fixed a couple of blue line stations, others still need adjustments

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <li data-coords="22,15" data-labelPos="NE" data-marker="@station"><a href="http://example.com/">Jardim Zoológico</a></li> 
             <li data-coords="23.5,16.5" data-labelPos="SW" data-marker="@station"><a href="http://example.com/">Praça de Espanha</a></li>            
             <li data-coords="26.5,19.5" data-labelPos="W" data-marker="@station"><a href="http://example.com/">Parque</a></li>           
-            <li data-coords="29.25,22.25" data-labelPos="W" data-marker="@station"><a href="http://example.com/">Avenida</a></li>           
-            <li data-coords="30.5,23.5" data-labelPos="W" data-marker="@station"><a href="http://example.com/">Restauradores</a></li>
+            <li data-coords="29,22.25" data-labelPos="NE" data-marker="@station"><a href="http://example.com/">Avenida</a></li>           
+            <li data-coords="30.25,23.5" data-labelPos="SW" data-marker="@station"><a href="http://example.com/">Restauradores</a></li>
             <li data-coords="33,26"></li>
             <li data-coords="36,26" data-labelPos="S"><a href="http://example.com/">Santa Apolónia</a></li>
         </ul>
