Add train line (work in progress)

--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
 
 <body class="">
     <div class="subway-map" data-columns="44" data-rows="30" data-cellSize="26" data-legendId="legend" data-textClass="text" data-gridNumbers="true" data-grid="false" data-lineWidth="8" style="background-color: transparent;">
+        <ul data-color="#ddd" data-label="Comboios" data-reverseMarkers="defined">
+            <li data-coords="10,9"></li> <!-- Reboleira -->
+            <li data-coords="14,13" data-labelPos="W" data-marker="@station"><a href="http://example.com/">Benfica</a></li>
+            <li data-coords="16,15"></li>
+            <li data-coords="21.5,15" data-labelPos="SW"><a href="http://example.com/">Sete Rios</a></li>
+            <li data-coords="28,15"></li> <!-- Entrecampos -->
+            <li data-coords="33,15" data-labelPos="NE"><a href="http://example.com/">Roma-Areeiro</a></li> <!-- Roma-Areeiro -->
+            <li data-coords="36,18" data-labelPos="S"><a href="http://example.com/">Chelas</a></li>
+            <li data-coords="38,18" data-labelPos="S" data-marker="@station"><a href="http://example.com/">Marvila</a></li>
+            <li data-coords="39,18"></li>
+            <li data-coords="40,17" data-labelPos="E" data-dir="E"><a href="http://example.com/">Braço de Prata</a></li> <!-- Braço de Prata -->
+            <li data-coords="40,11"></li> <!-- Oriente -->
+            <li data-coords="40,7"></li> <!-- termino norte -->
+        </ul>   
         <ul data-color="#5082C3" data-label="Linha Azul">
             <li data-coords="10,9" data-labelPos="NW"><a href="http://example.com/">Reboleira</a></li>
             <li data-coords="12,9" data-labelPos="S"><a href="http://example.com/">Amadora-Este</a></li>
@@ -63,7 +77,7 @@
             <li data-coords="18.5,11" data-labelPos="E" data-marker="@station"><a href="http://example.com/">Colégio Militar-Luz</a></li> 
             <li data-coords="19.75,12.25" data-labelPos="E" data-marker="@station"><a href="http://example.com/">Alto dos Moinhos</a></li> 
             <li data-coords="21,13.5" data-labelPos="E" data-marker="@station"><a href="http://example.com/">Laranjeiras</a></li> 
-            <li data-coords="22,15" data-labelPos="NE" data-marker="@station"><a href="http://example.com/">Jardim Zoológico</a></li> 
+            <li data-coords="21.5,15" data-labelPos="NE" data-marker="@interchange" data-markerInfo="h2"><a href="http://example.com/">Jardim Zoológico</a></li> 
             <li data-coords="23.5,16.5" data-labelPos="SW" data-marker="@station"><a href="http://example.com/">Praça de Espanha</a></li>            
             <li data-coords="26.5,19.5" data-labelPos="W" data-marker="@station"><a href="http://example.com/">Parque</a></li>           
             <li data-coords="29,22.25" data-labelPos="NE" data-marker="@station"><a href="http://example.com/">Avenida</a></li>           
@@ -77,8 +91,8 @@
             <li data-coords="28,22" data-dir="E"></li>
             <li data-coords="28,21" data-labelPos="SW" data-marker="interchange"><a href="http://example.com/">Marquês de Pombal</a></li>
             <li data-coords="28,19.5" data-labelPos="E"><a href="http://example.com/">Picoas</a></li>
-            <li data-coords="28,16.5" data-labelPos="W"><a href="http://example.com/">Campo Pequeno</a></li>
-            <li data-coords="28,15" data-labelPos="W"><a href="http://example.com/">Entre Campos</a></li>
+            <li data-coords="28,16.5" data-labelPos="SW"><a href="http://example.com/">Campo Pequeno</a></li>
+            <li data-coords="28,15" data-labelPos="SW" data-marker="interchange"><a href="http://example.com/">Entre Campos</a></li>
             <li data-coords="28,13" data-labelPos="W"><a href="http://example.com/">Cidade Universitária</a></li>
             <li data-coords="28,9.5" data-labelPos="E"><a href="http://example.com/">Quinta das Conchas</a></li>
             <li data-coords="28,8" data-labelPos="E"><a href="http://example.com/">Lumiar</a></li>
@@ -90,7 +104,7 @@
             <li data-coords="30,26" data-labelPos="NW"><a href="http://example.com/">Cais do Sodré</a></li>
             <li data-coords="31,26"></li>
             <li data-coords="32,25" data-dir="E"></li>                       
-            <li data-coords="32,25.25" data-labelPos="NWE" data-marker="@interchange"><a href="http://example.com/">Baixa-Chiado</a></li>                     
+            <li data-coords="32,25.25" data-labelPos="NE" data-marker="@interchange"><a href="http://example.com/">Baixa-Chiado</a></li>                     
             <li data-coords="32,23.9" data-labelPos="E" data-marker="@station"><a href="http://example.com/">Rossio</a></li>                     
             <li data-coords="32,22.8" data-labelPos="E" data-marker="@station"><a href="http://example.com/">Martim Moniz</a></li>                     
             <li data-coords="32,21.7" data-labelPos="E" data-marker="@station"><a href="http://example.com/">Intendente</a></li>                     
