Changed font, embedded google fonts to allow consistency everywhere

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Subway Map</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="jquery.subwayMap-0.5.0.js"></script>
     <style type="text/css">
     body {
-        font-family: 'Droid Sans';
+        font-family: 'Source Sans Pro', sans-serif;
         font-size: 8pt;
     }
     /* The main DIV for the map */
