Update colors (official pantones, converted to hex with rgb.to)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     .text {
         text-decoration: none;
-        color: #142382;
+        color: #280071;
         font-size: 7pt;
     }
     
@@ -69,7 +69,7 @@
             <li data-coords="40,11"></li> <!-- Oriente -->
             <li data-coords="40,7"></li> <!-- termino norte -->
         </ul>   
-        <ul data-color="#5082C3" data-label="Linha Azul">
+        <ul data-color="#307fe2" data-label="Linha Azul">
             <li data-coords="10,9" data-labelPos="NW"><a href="http://example.com/">Reboleira</a></li>
             <li data-coords="12,9" data-labelPos="S"><a href="http://example.com/">Amadora-Este</a></li>
             <li data-coords="14,9" data-labelPos="N"><a href="http://example.com/">Alfornelos</a></li>
@@ -87,7 +87,7 @@
             <li data-coords="35,26" data-labelPos="N"><a href="http://example.com/">Terreiro do Paço</a></li>
             <li data-coords="37,26" data-labelPos="S"><a href="http://example.com/">Santa Apolónia</a></li>
         </ul>
-        <ul data-color="#FAB914" data-label="Linha Amarela">
+        <ul data-color="#f2a900" data-label="Linha Amarela">
             <li data-coords="27,23" data-labelPos="W"><a href="http://example.com/">Rato</a></li>
             <li data-coords="28,22" data-dir="E"></li>
             <li data-coords="28,21" data-labelPos="SW" data-marker="interchange"><a href="http://example.com/">Marquês de Pombal</a></li>
@@ -101,7 +101,7 @@
             <li data-coords="28,5" data-labelPos="E"><a href="http://example.com/">Senhor Roubado</a></li>
             <li data-coords="28,4" data-labelPos="E"><a href="http://example.com/">Odivelas</a></li>
         </ul>
-        <ul data-color="#00A0A5" data-label="Linha Verde">
+        <ul data-color="#00a499" data-label="Linha Verde">
             <li data-coords="30,26" data-labelPos="NW"><a href="http://example.com/">Cais do Sodré</a></li>
             <li data-coords="31,26"></li>
             <li data-coords="32,25" data-dir="E"></li>                       
@@ -118,7 +118,7 @@
             <li data-coords="28,11" data-labelPos="NE" data-marker="interchange"><a href="http://example.com/">Campo Grande</a></li>
             <li data-coords="26,11" data-labelPos="N"><a href="http://example.com/">Telheiras</a></li>
         </ul>
-        <ul data-color="#E6196E" data-label="Linha Vermelha">
+        <ul data-color="#e31c79" data-label="Linha Vermelha">
             <li data-coords="25,18" data-labelPos="SW" data-marker="interchange"><a href="http://example.com/">São Sebastião</a></li>
             <li data-coords="28,18" data-labelPos="NE" data-marker="interchange"><a href="http://example.com/">Saldanha</a></li>
             <li data-coords="32,18" data-labelPos="SE" data-marker="interchange"><a href="http://example.com/">Alameda</a></li>
